--- a/example/the-real-wedding/index.html
+++ b/example/the-real-wedding/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"><!-- Basic -->
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PPT6HE6R1N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PPT6HE6R1N');
+</script>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">   
    
